@@ -660,6 +660,14 @@ bool Converters::runLaTeX(Buffer const & buffer, string const & command,
 					       "Additionally, LyX could not locate "
 					       "the LaTeX log %1$s."), from_utf8(name));
 		Alert::error(_("LaTeX failed"), str);
+	} else if (result & LaTeX::NONZERO_ERROR) {
+		docstring const str =
+			bformat(_( "The external program\n%1$s\n"
+			      "finished with an error. "
+			      "It is recommended you fix the cause of the external "
+			      "program's error (check the logs). "), from_utf8(command));
+		// FIXME: In LyX 2.3.0 the warning will be converted to an error.
+		Alert::error(_("LaTeX failed"), str);
 	} else if (result & LaTeX::NO_OUTPUT) {
 		Alert::warning(_("Output is empty"),
 			       _("No output file was generated."));
